# fhe_ios_demo

./: .gitignore  COMPILING.md  README.md  setup_tfhe_xcframework.sh
.github/workflows/: ci.yaml
AdsApp/: AdsView.VM.swift  AdsView.swift  SocialTimeline.Models.swift  SocialTimeline.VM.swift  SocialTimeline.swift
AdsApp/AppSupport/: AppRoot.swift  Info.plist
AdsQLExtension/: PreviewContent.swift  PreviewVC.swift  allAds.json
AdsQLExtension/AppSupport/: Info.plist
AdsQuickLookExtension/: AdModel.swift  AdView.swift  PreviewContent.swift  PreviewVC.swift
App/: ContentView.swift  FHEDemoApp.swift  FHEEngine.swift  HealthView.swift
Bridge/: BridgeApp.swift  Entitlements.entitlements  FHEEngine.swift  HealthView.swift  Info.plist
BridgeApp/: BridgeApp.swift  BridgeVM.swift  BridgeView.swift  FHEEngine.swift  HealthVM.swift  HealthView.swift  Info.plist  SleepModels.swift  SleepViews.swift
BridgeApp/AppSupport/: Info.plist
ClientApp/: AnalysisVM.swift  AnalysisView.swift  ClientView.VM.swift  ClientView.swift  FilePreview.swift  Info.plist  Network.swift
ClientApp/AppSupport/: ClientApp.swift
ClientApp/Helpers/: AsyncButton.swift  Data+Ext.swift  FilePreview.swift  View+Screenshot.swift
DataVaultApp/: DataVaultRoot.swift  DataVaultVM.swift  DataVaultView.swift  HealthViewModel.swift  HomeTab.swift  ProfileForm.swift  ProfileForm2.swift  ProfileModels.swift  ProfileOneHot.swift  ProfileTab.swift  ProfileVM.swift  SleepModels.swift  SleepTab.swift  SleepViews.swift  WeightTab.swift
DataVaultApp/AppSupport/: AppRoot.swift  DataVaultApp.swift  Entitlements.entitlements  Info.plist
DataVaultApp/DataVaultUI/: ConsoleSection.swift
DataVaultApp/NewUI/: DataVaultRoot.swift  ProfileTab.swift  SleepTab.swift  TagsGridView.swift  WeightTab.swift
Docs/: Ads.md  FinalClientAppSpecs.md  HTTP_API.curl  Presentation.key  data_oxygen.txt  data_sleep.txt
Docs/ads/: Ads.md  ads_files.json  onehot_ads.json  onehot_user_profiles.json  processed_subset_tweet.json
FHEDemo.xcodeproj/: project.pbxproj
HealthApp/: CustomBox.swift  CustomUI.swift  HealthConstants.swift  HealthRoot.swift  HealthView.VM.swift  HealthView.swift  HomeTab.swift  MainTabs.swift  Network.swift  SleepTab.swift  WeightTab.swift  _HealthView.VM.swift  _HealthView.swift
HealthApp/AppSupport/: AppRoot.swift  Entitlements.entitlements  HealthApp.swift  Info.plist
HealthApp/HealthUI/: AsyncStatus.swift  CustomBox.swift  NoDataBadge.swift  ZamaCalendar.swift  ZamaInfoButton.swift
HealthQLExtension/: PreviewContent.swift  PrivateDisplayRing.swift
QLAdsExtension/: AdModel.swift  AdView.swift  PreviewContent.swift  PreviewVC.swift  script_removeDuplicateImages.swift
QLAdsExtension/AppSupport/: Entitlements.entitlements  Info.plist
QLHealthExtension/: PreviewContent.swift  PreviewVC.swift  SecurelyDisplayedModifier.swift  SleepChartView.swift  SleepQualityView.swift
QLHealthExtension/AppSupport/: Entitlements.entitlements  Info.plist
QuickLookExtension/: Info.plist  PreviewVC.swift  PreviewWrapperVC.swift  PrivateDataRing.swift  PrivateDisplayRing.swift  PrivateViews.swift  QuickLookExtension.entitlements  SecureView.swift  SecureViews.swift  SleepChartView.swift
QuickLookExtension/Base.lproj/: MainInterface.storyboard
Rust/my-rust-lib/: Cargo.toml  Makefile
Server/: .common_env  .env  .env_dev  .env_prod  .env_staging  .gitattributes  Dockerfile.server  FilePreview.swift  Makefile  README.md  ServerApp.swift  benchmark.csv  build_docker.sh  build_tasks.sh  client.curl  client.py  client.swift  client_requirements.txt  commands.txt  common.env  deploy_to_docker.py  docker-compose.yml  entrypoint.sh  full_tests  full_tests.curl  launch_docker.sh  result.fheencrypted  server.py  server_requirements.txt  setup_env.sh  task_executor.py  tasks.py  tasks.yaml  test_with_curl.sh  update_benchmarks.py  utils.py
Server/rust_array_stats/: Cargo.toml
Server/rust_folder/: Cargo.toml
Server/scripts/: docker_build.sh  docker_run.sh  entrypoint.sh  generate_certificates.sh  tests_build.sh
Server/tasks/sleep_quality/: Cargo.toml
Server/tasks/sleep_quality/src/: lib.rs  main.rs  run_sleep.rs  sleep_analysis.rs  test.rs
Server/tasks/synthid/: Cargo.toml
Server/tasks/synthid/src/: main.rs  synthid_logic.rs
Server/tasks/weight_stats/: Cargo.toml
Server/tasks/weight_stats/src/: lib.rs  main.rs
Server/tests/: generate_stress_data.py  stress_runner.py  test_ad_targeting.py  test_endpoints.py  test_sleep_analysis.py  test_sleep_quality.py  test_weight_stats.py  utils.py
ServerApp/: ServerApp.swift
Shared/: AsyncButton.swift  Data+Ext.swift  FilePreview.swift  Network.swift  OpenAppButton.swift  OpenOtherAppButton.swift  SharedUI.swift  SleepModels.swift  Storage.swift  TabModels.swift
Shared/CustomFont/: CustomFont.swift
Shared/FHE/: ClientKey.swift  CompactCiphertextList.swift  FHEHelpers.swift  FHEResult.swift  FHEUInt10.swift  FHEUInt16.swift  FHEUInt16Array.swift  FHEUInt4.swift  FHEUInt8.swift  Persistable.swift  ServerKey.Compressed.swift  ServerKey.swift  Test.swift
Shared/Files/: FHERenderable.swift  Persistable.swift  Storage.swift
(+87 files in other folders)
