[package]
name = "sleep_quality"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
tfhe = { version = "0.7.4", features = ["boolean",  "integer", "x86_64-unix"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "sleep_quality"
path = "src/main.rs"
