[package]
name = "synthid"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# For x86_64 (e.g., Linux servers, Docker builds targeting amd64)
[target.'cfg(target_arch = "x86_64")'.dependencies.tfhe]
version = "0.7.4"
features = ["integer", "x86_64-unix"]

# For aarch64 macOS (e.g., Apple Silicon Macs)
[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies.tfhe]
version = "0.7.4"
features = ["integer", "aarch64-unix"]

# For aarch64 Linux (e.g., ARM-based Linux servers/dev environments)
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies.tfhe]
version = "0.7.4"
features = ["integer", "aarch64-unix"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[[bin]]
name = "synthid"
path = "src/main.rs" 