[package]
name = "synthid"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "1ec21a5e0b7c12165aa7e556c01e730c3117765a", features = ["integer"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[[bin]]
name = "synthid"
path = "src/main.rs" 