[package]
name = "weight_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
tfhe = { version = "0.7.4", features = ["integer", "x86_64-unix"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 3
lto = "off"
debug-assertions = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "weight_stats"
path = "src/main.rs"
